tests/fail/concurrency/windows_join_main.stderr
error: deadlock: the evaluated program deadlocked
  --> $DIR/windows_join_main.rs:LL:CC
   |
LL |         WaitForSingleObject(MAIN_THREAD, INFINITE);
   |                                                   ^ the evaluated program deadlocked
   |
   = note: inside closure at $DIR/windows_join_main.rs:LL:CC

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

